--- a/app/home/Home.module.css
+++ b/app/home/Home.module.css
@@ -1,5 +1,5 @@
 .container {
-    background-image: url("/fundo.jpg");
+    background-image: url("/rc.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
