--- a/styles/CharacterCard.module.css
+++ b/styles/CharacterCard.module.css
@@ -6,6 +6,7 @@
     text-align: center;
     transition: transform 0.3s;
     min-height: 290px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .card:hover{
@@ -13,7 +14,7 @@
 }
 
 .avatar {
-    width: 105%;
+    width: 100%;
     border-radius: 50%;
 }
 
