--- a/app/home/Home.module.css
+++ b/app/home/Home.module.css
@@ -17,3 +17,45 @@
     align-items: center;
     gap: 2rem;
 }
+
+.input{
+    width: 100%;
+    max-width: 400px;
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 1rem;
+    border-radius: 40px;
+    margin-bottom: 1rem;
+    margin-left: 20rem;
+    margin-right: 1rem;
+}
+
+.buttonRed{
+    background-color: #ff0000;
+    color: white;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 1rem;
+    margin-left: 2rem;
+}
+
+.button{
+    background-color: #007bff;
+    color: white;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.title{
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: #ffffff;
+    margin-bottom: 1rem;
+    text-align: center;
+}
