--- a/app/home/Home.module.css
+++ b/app/home/Home.module.css
@@ -56,6 +56,34 @@
     font-size: 2.5rem;
     font-weight: bold;
     color: #ffffff;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     text-align: center;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.buttonNav {
+    display: flex;
+    background-color: #e3b009;
+    color: white;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 1rem;
+    text-decoration: none;
+    display: inline-block;
+    transition: background-color 0.3s ease;
+}
+
+.buttonNav:hover {
+    background-color: #e4cd01;
+}
+
+.navControls {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    margin-top: 1rem; 
+    margin-bottom: 1rem;
+    gap: 1rem;
 }
