--- a/app/home/Home.module.css
+++ b/app/home/Home.module.css
@@ -25,6 +25,7 @@
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 1rem;
+    outline: none;
     border-radius: 40px;
     margin-bottom: 1rem;
     margin-left: 40rem;
@@ -86,4 +87,13 @@
     margin-top: 1rem; 
     margin-bottom: 1rem;
     gap: 1rem;
+}
+
+.pageIndicator{
+    font-size: 1.2rem;
+    color: #ffffff;
+    text-align: center;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
